apps/media/control/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-prod-media-ingress
  annotations: 
    cert-manager.io/cluster-issuer: home-ca-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - seerr.home.arpa
    secretName: home-arpa-tls
  rules:
  - host: "seerr.home.arpa"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: seerr-prod-media-svc
            port:
              number: 5055
